fixes  issue where white space would appear if  there was too little content on page

--- a/wp-content/themes/connectIN/styles/global.css
+++ b/wp-content/themes/connectIN/styles/global.css
@@ -20,3 +20,12 @@ img {
 b, strong {
   font-weight: 700;
 }
+
+body, html {
+  background-color: var(--color-dkgray);
+  min-height: 100vh;
+}
+
+main {
+  background-color: #fff;
+}
